		(int)Math.floor(... to guarantee that the movement is always downwards.
		This enables (among other things) objects to be selected and inspected when
		they're located in certain negative regions.  Irritating that this bug 
		wasn't caught earlier...
	Fix to PacMan: ghosts who were frightened precisely when the game changed to a new
		screen stayed frightened (and in their box) indefinitely.  A rare occurrance
		but a weird one.
	Added toroidal displaying to Continuous2D.  It could in theory be added to
		SparsePortrayal2D as well but is significantly more complex due to (1) the
		fact that SparsePortrayal2D draws its objects by looking up filled locations
		rather than looking up each object in turn and (2) the fact that
		SparsePortrayal2D allows for expicit drawing orders.  Maybe we'll add it later.
	Added setIncrementSeedOnPlay() and getIncrementSeedOnPlay() to Console and to
		SimpleController.  SimpleController in particular now has this value by
		default set to TRUE (Console always had it TRUE by default).
	Updated copyright information
	Added sim.display.RateAdjuster
	Removed sim.app.pacman.RateAdjuster (and changed how it works)
	Added Asteroids
	Added Asteroids to Makefile (oops)
	Tweaks to SimpleController so it doesn't go into infinite recursive loops on quitting
	Fix to ParallelSequence.  When we added thread naming, we accidentally included the
		current thread as an instance variable, as a bit of efficiency.  But threads
		aren't serializable, so it broke checkpointing.
	Fix to Display3D's new ability to select one or many elements with its picker: by default
		we were selecting only ONE, which is wrong.
	Fixes to Asteroids's and PacMan's handling of window focus events
	Scaling when the simulation isn't running no longer throws an exception.		
	Added ImageIcon loading to ImagePortrayal2D
	Added ImageIcon and Resource loading to ImagePortrayal3D
	Updated LabelledPortrayal3D to use 1/16 scaling since we're now using Text3D